--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="informacoes"> 
             <img class="logo" src="./src/imagens/logo.png" alt="logo the last of us">
             <p class="descricao">
-                The Last of Us é uma série distópica da HBO baseada na franqui de jogos de videogame de mesmo noomecriada por NEil Druckmann. O drama narra um futuro pandêmico que foi devasador para a humanidade, deixando os seres humanos à beira da extinção. </p></div>
+                The Last of Us é uma série distópica da HBO baseada na franquia de jogos de videogame de mesmo nome criada por NEil Druckmann. O drama narra um futuro pandêmico que foi devastador para a humanidade, deixando os seres humanos à beira da extinção. </p></div>
 
             <div class="botoes-carrossel">
                 <button class="botao selecionado"></button>
